--- a/FaostatExtractor/files/configuration.ini
+++ b/FaostatExtractor/files/configuration.ini
@@ -4,7 +4,7 @@ zip_file_path = ./downloaded_data/database.zip
 data_file_path = ./downloaded_data/database_extracted
 
 [HISTORICAL]
-first_valid_year = 2012
+first_valid_year = 2013
 
 [INDICATOR_CATCHER]
 result_file_path = ./downloaded_data/info_indicators.txt
@@ -13,7 +13,7 @@ result_file_path = ./downloaded_data/info_indicators.txt
 indicator_names_valid_path = ./files/indicator_names.txt
 historical_mode = True
 org_id = faostat
-obs_int = 60228
+obs_int = 20096
 sli_int = 0
 dat_int = 1
 igr_int = 0
@@ -122,4 +122,40 @@ relative_forest_land_name_fr = Superficie forestière relatif
 relative_forest_land_desc_en = Relative forest land.
 relative_forest_land_desc_es = Superficie forestal relativa.
 relative_forest_land_desc_fr = Superficie forestière relatif.
+permanent_crops_id = 8
+permanent_crops_topic = LAND_USE
+permanent_crops_tendency = INCREASE
+permanent_crops_unit_name = Hectares
+permanent_crops_unit_type = sq. km
+permanent_crops_unit_factor = 10000
+permanent_crops_name_en = Permanent crops FIXME
+permanent_crops_name_es = Permanent crops FIXME
+permanent_crops_name_fr = Permanent crops FIXME
+permanent_crops_desc_en = Permanent crops FIXME
+permanent_crops_desc_es = Permanent crops FIXME
+permanent_crops_desc_fr = Permanent crops FIXME
+permanent_meadows_and_pastures_id = 9
+permanent_meadows_and_pastures_topic = LAND_USE
+permanent_meadows_and_pastures_tendency = INCREASE
+permanent_meadows_and_pastures_unit_name = Hectares
+permanent_meadows_and_pastures_unit_type = sq. km
+permanent_meadows_and_pastures_unit_factor = 10000
+permanent_meadows_and_pastures_name_en = Permanent meadows and pastures FIXME
+permanent_meadows_and_pastures_name_es = Permanent meadows and pastures FIXME
+permanent_meadows_and_pastures_name_fr = Permanent meadows and pastures FIXME
+permanent_meadows_and_pastures_desc_en = Permanent meadows and pastures FIXME
+permanent_meadows_and_pastures_desc_es = Permanent meadows and pastures FIXME
+permanent_meadows_and_pastures_desc_fr = Permanent meadows and pastures FIXME
+agricultural_area_organic_id = 10
+agricultural_area_organic_topic = LAND_USE
+agricultural_area_organic_tendency = INCREASE
+agricultural_area_organic_unit_name = Hectares
+agricultural_area_organic_unit_type = sq. km
+agricultural_area_organic_unit_factor = 10000
+agricultural_area_organic_name_en = Agricultural area organic, total FIXME
+agricultural_area_organic_name_es = Agricultural area organic, total FIXME
+agricultural_area_organic_name_fr = Agricultural area organic, total FIXME
+agricultural_area_organic_desc_en = Agricultural area organic, total FIXME
+agricultural_area_organic_desc_es = Agricultural area organic, total FIXME
+agricultural_area_organic_desc_fr = Agricultural area organic, total FIXME
 
