fixed mixed value for url and republish in configuration files

--- a/FaostatExtractor/files/configuration-water.ini
+++ b/FaostatExtractor/files/configuration-water.ini
@@ -37,8 +37,8 @@ datasource_id = 1
 [LICENSE]
 name = Attribution and need permission for commercial use
 description = Copyright Fao
-url = True
-republish = http://www.fao.org/contact-us/terms/en/
+republish = True
+url = http://www.fao.org/contact-us/terms/en/
 
 [INDICATORS]
 codes = ["INDICATOR11"]
