--- a/FaostatExtractor/files/configuration.ini
+++ b/FaostatExtractor/files/configuration.ini
@@ -37,8 +37,8 @@ datasource_id = 1
 [LICENSE]
 name = Attribution and need permission for commercial use
 description = Copyright Fao
-url = True
-republish = http://www.fao.org/contact-us/terms/en/
+republish = True
+url = http://www.fao.org/contact-us/terms/en/
 
 [INDICATORS]
 codes = ["INDICATOR1","INDICATOR2","INDICATOR3","INDICATOR4","INDICATOR5","INDICATOR6","INDICATOR7","INDICATOR8","INDICATOR9","INDICATOR10"]
