added new indicators for WorlBank

--- a/WorldBank_Importer/config/configuration.ini
+++ b/WorldBank_Importer/config/configuration.ini
@@ -15,6 +15,128 @@ World Bank - Poverty indicators = poverty_indicators
 World Bank - Employment indicators = employment_indicators
 World Bank - Literacy indicators = literacy_indicators
 World Bank - Malnutrition indicators = malnutrition_indicators
+Worl Bank - new indicators = new_indicators
+
+[new_indicators]
+Agricultural irrigated land (% of total agricultural land) = AG.LND.IRIG.AG.ZS
+Improved water source (% of population with access) = SH.H2O.SAFE.ZS
+Improved water source, rural (% of rural population with access) = SH.H2O.SAFE.RU.ZS
+Improved water source, urban (% of urban population with access) = SH.H2O.SAFE.UR.ZS
+GINI index (World Bank estimate) = SI.POV.GINI
+GDP growth (annual %) = NY.GDP.MKTP.KD.ZG
+GDP, PPP (constant 2011 international $)) = NY.GDP.MKTP.PP.KD
+GDP per capita, PPP (constant 2011 international $) = NY.GDP.PCAP.PP.KD
+
+
+[AG.LND.IRIG.AG.ZS]
+indicator_id = 32
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = % of total agricultural land
+indicator_unit_type = %
+name_en = Agricultural irrigated land
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+[SH.H2O.SAFE.ZS]
+indicator_id = 33
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = % of population with access
+indicator_unit_type = %
+name_en = Improved water source (% of population with access)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+[SH.H2O.SAFE.RU.ZS]
+indicator_id = 34
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = % of rural population with access
+indicator_unit_type = %
+name_en = Improved water source, rural (% of rural population with access)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+[SH.H2O.SAFE.UR.ZS]
+indicator_id = 35
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = % of urban population with access
+indicator_unit_type = %
+name_en = Improved water source, urban (% of urban population with access)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+[SI.POV.GINI]
+indicator_id = 36
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = GINI index
+indicator_unit_type = index
+name_en = GINI index (World Bank estimate)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+
+[NY.GDP.MKTP.KD.ZG]
+indicator_id = 37
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = annual %
+indicator_unit_type = %
+name_en = GDP growth (annual %)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+[NY.GDP.MKTP.PP.KD]
+indicator_id = 38
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = constant 2011 international $
+indicator_unit_type = units
+name_en = GDP, PPP (constant 2011 international $)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+
+[NY.GDP.PCAP.PP.KD]
+indicator_id = 39
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = constant 2011 international $
+indicator_unit_type = units
+name_en = GDP per capita, PPP (constant 2011 international $)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+
+
+
 
 [rural_development_indicators]
 agriculture, value added (% of gdp) = NV.AGR.TOTL.ZS
@@ -46,6 +168,7 @@ name_fr = Superficie
 desc_en = Surface area is a country's total area, including areas under inland bodies of water and some coastal waterways.
 desc_es = Por superficie se entiende la superficie total de un país, incluidas las zonas cubiertas por masas de agua interiores y algunas vías navegables costeras.
 desc_fr = La surface du territoire est la superficie totale d'un pays y compris les zones qui sont sous les masses d'eaux continentales et certaines voies navigables côtières.
+
 
 [socio_economic_indicators]
 life expectancy at birth, female (years) = SP.DYN.LE00.FE.IN
