update license for FAO STAT and FAO STAT ASTI

--- a/FAOSTAT-ASTI_Importer/files/configuration-ASTI_Researchers.ini
+++ b/FAOSTAT-ASTI_Importer/files/configuration-ASTI_Researchers.ini
@@ -35,9 +35,9 @@ name = FAO - Statistics Division
 datasource_id = 1
 
 [LICENSE]
-name = Attribution and need permission for commercial use
-description = Copyright Fao
-republish = True
+name = FAO Copyright
+description = Attribution and need permission for commercial use
+republish = true
 url = http://www.fao.org/contact-us/terms/en/
 
 [INDICATORS]
