update license section in cofig file

--- a/FAOAgriculturalCensuesImporter/files/configuration.ini
+++ b/FAOAgriculturalCensuesImporter/files/configuration.ini
@@ -212,8 +212,8 @@ description_fr = Atteindre la sécurité alimentaire pour tous est au coeur des 
 chain_for_id = FAO
 
 [LICENSE]
-republish = True
+name = FAO Copyright
 description = Attribution and need permission for commercial use
-name = CopyrightFao
+republish = true
 url = http://www.fao.org/contact-us/terms/en/
 
