Added indicators "Control of Corruption: Estimate" and "Rule of Law: Estimate" from World Bank API
Data from Worldwide Governance Indicators.

- Control of Corruption: Estimate (code CC.EST)
- Rule of Law: Estimate (code RL.EST)

--- a/WorldBank_Importer/config/configuration.ini
+++ b/WorldBank_Importer/config/configuration.ini
@@ -15,7 +15,8 @@ World Bank - Poverty indicators = poverty_indicators
 World Bank - Employment indicators = employment_indicators
 World Bank - Literacy indicators = literacy_indicators
 World Bank - Malnutrition indicators = malnutrition_indicators
-Worl Bank - new indicators = new_indicators
+World Bank - new indicators = new_indicators
+World Bank - Worldwide Governance Indicators = wgi
 
 [new_indicators]
 Agricultural irrigated land (% of total agricultural land) = AG.LND.IRIG.AG.ZS
@@ -26,6 +27,37 @@ GINI index (World Bank estimate) = SI.POV.GINI
 GDP growth (annual %) = NY.GDP.MKTP.KD.ZG
 GDP, PPP (constant 2011 international $)) = NY.GDP.MKTP.PP.KD
 GDP per capita, PPP (constant 2011 international $) = NY.GDP.PCAP.PP.KD
+
+[wgi]
+Control of Corruption (Estimate) = CC.EST
+Rule of Law (Estimate) = RL.EST
+
+[CC.EST]
+indicator_id = 40
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = %
+indicator_unit_type = %
+name_en = Control of Corruption
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+[RL.EST]
+indicator_id = 41
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = %
+indicator_unit_type = %
+name_en = Rule of law
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
 
 
 [AG.LND.IRIG.AG.ZS]
