--- a/LandMatrixExtractor/files/configuration.ini
+++ b/LandMatrixExtractor/files/configuration.ini
@@ -3,7 +3,7 @@ url_download = http://landmatrix.org/get-the-detail/database.csv?download_format
 target_file = ./downloaded_data/land_matrix_whole_database_xml.xml
 
 [HISTORICAL]
-fisrt_valid_year = 2014
+first_valid_year = 2014
 
 [TRANSLATOR]
 org_id = lm
