updated the way to add new indicators

--- a/LandMatrixExtractor/files/configuration.ini
+++ b/LandMatrixExtractor/files/configuration.ini
@@ -7,7 +7,7 @@ first_valid_year = 2014
 
 [TRANSLATOR]
 org_id = lm
-obs_int = 776
+obs_int = 693
 sli_int = 0
 dat_int = 1
 igr_int = 0
@@ -33,116 +33,165 @@ name = Creative Commons Attribution-NonComercial-ShareAlike 3.0 Unported (CC BY-
 url = http://creativecommons.org/licenses/by-nc-sa/3.0/7
 
 [INDICATORS]
-total_deals_name_en = Total number of deals
-total_deals_name_es = Total number of deals
-total_deals_name_fr = Nombre total de transactions
-total_deals_desc_en = No available description.
-total_deals_desc_es = Ninguna descripción disponible.
-total_deals_desc_fr = Aucune description disponible.
-total_deals_id = 0
-agriculture_deals_name_en = Total number of agriculture deals
-agriculture_deals_name_es = Total number of agriculture deals
-agriculture_deals_name_fr = Nombre total de transactions (agriculture)
-agriculture_deals_desc_en = No available description.
-agriculture_deals_desc_es = Ninguna descripción disponible.
-agriculture_deals_desc_fr = Aucune description disponible.
-agriculture_deals_id = 1
-conservation_deals_name_en = Total number of conservation deals
-conservation_deals_name_es = Total number of conservation deals
-conservation_deals_name_fr = Nombre total de transactions (conservation)
-conservation_deals_desc_en = No available description.
-conservation_deals_desc_es = Ninguna descripción disponible.
-conservation_deals_desc_fr = Aucune description disponible.
-conservation_deals_id = 2
-forestry_deals_name_en = Total number of forestry deals
-forestry_deals_name_es = Total number of forestry deals
-forestry_deals_name_fr = Nombre total de transactions (sylviculture)
-forestry_deals_desc_en = No available description.
-forestry_deals_desc_es = Ninguna descripción disponible.
-forestry_deals_desc_fr = Aucune description disponible.
-forestry_deals_id = 3
-industry_deals_name_en = Total number of industry deals
-industry_deals_name_es = Total number of industry deals
-industry_deals_name_fr = Nombre total de transactions (industrie)
-industry_deals_desc_en = No available description.
-industry_deals_desc_es = Ninguna descripción disponible.
-industry_deals_desc_fr = Aucune description disponible.
-industry_deals_id = 4
-renewable_energy_deals_name_en = Total number of renewable energy deals
-renewable_energy_deals_name_es = Total number of renewable energy deals
-renewable_energy_deals_name_fr = Nombre total de transactions (énergies renouvelables)
-renewable_energy_deals_desc_en = No available description.
-renewable_energy_deals_desc_es = Ninguna descripción disponible.
-renewable_energy_deals_desc_fr = Aucune description disponible.
-renewable_energy_deals_id = 5
-tourism_deals_name_en = Total number of tourism deals
-tourism_deals_name_es = Total number of tourism deals
-tourism_deals_name_fr = Nombre total de transactions (tourisme)
-tourism_deals_desc_en = No available description.
-tourism_deals_desc_es = Ninguna descripción disponible.
-tourism_deals_desc_fr = Aucune description disponible.
-tourism_deals_id = 6
-other_topic_deals_name_en = Total number of deals of other topic
-other_topic_deals_name_es = Total number of deals of other topic
-other_topic_deals_name_fr = Nombre total de transactions (autre)
-other_topic_deals_desc_en = No available description.
-other_topic_deals_desc_es = Ninguna descripción disponible.
-other_topic_deals_desc_fr = Aucune description disponible.
-other_topic_deals_id = 7
-unknown_topic_deals_name_en = Total number of deals of unknown topic
-unknown_topic_deals_name_es = Total number of deals of unknown topic
-unknown_topic_deals_name_fr = Nombre total de transactions (Aucune description disponible.)
-unknown_topic_deals_desc_en = No available description.
-unknown_topic_deals_desc_es = Ninguna descripción disponible.
-unknown_topic_deals_desc_fr = Aucune description disponible.
-unknown_topic_deals_id = 8
-intended_deals_name_en = Total deals in intended state
-intended_deals_name_es = Total deals in intended state
-intended_deals_name_fr = Nombre total de transactions (prévues)
-intended_deals_desc_en = No available description.
-intended_deals_desc_es = Ninguna descripción disponible.
-intended_deals_desc_fr = Aucune description disponible.
-intended_deals_id = 9
-concluded_deals_name_en = Total deals in concluded state
-concluded_deals_name_es = Total deals in concluded state
-concluded_deals_name_fr = Nombre total de transactions (conclues)
-concluded_deals_desc_en = No available description.
-concluded_deals_desc_es = Ninguna descripción disponible.
-concluded_deals_desc_fr = Aucune description disponible.
-concluded_deals_id = 10
-failed_deals_name_en = Total deals in failed state
-failed_deals_name_es = Total deals in failed state
-failed_deals_name_fr = Nombre total de transactions (échec)
-failed_deals_desc_en = No available description.
-failed_deals_desc_es = Ninguna descripción disponible.
-failed_deals_desc_fr = Aucune description disponible.
-failed_deals_id = 11
-hectares_total_deals_name_en = Total hectares in deals
-hectares_total_deals_name_es = Total hectares in deals
-hectares_total_deals_name_fr = Nombre total d'hectares concernés par les transactions
-hectares_total_deals_desc_en = No available description.
-hectares_total_deals_desc_es = Ninguna descripción disponible.
-hectares_total_deals_desc_fr = Aucune description disponible.
-hectares_total_deals_id = 12
-hectares_intended_deals_name_en = Total hectares in intended deals
-hectares_intended_deals_name_es = Total hectares in intended deals
-hectares_intended_deals_name_fr = Nombre total d'hectares concernés par les transactions (prévues)
-hectares_intended_deals_desc_en = No available description.
-hectares_intended_deals_desc_es = Ninguna descripción disponible.
-hectares_intended_deals_desc_fr = Aucune description disponible.
-hectares_intended_deals_id = 13
-hectares_contract_deals_name_en = Total hectares in contracted deals
-hectares_contract_deals_name_es = Total hectares in contracted deals
-hectares_contract_deals_name_fr = Nombre total d'hectares concernés par les transactions (conclues)
-hectares_contract_deals_desc_en = No available description.
-hectares_contract_deals_desc_es = Ninguna descripción disponible.
-hectares_contract_deals_desc_fr = Aucune description disponible.
-hectares_contract_deals_id = 14
-hectares_production_deals_name_en = Total hectares in deals in production
-hectares_production_deals_name_es = Total hectares in deals in production
-hectares_production_deals_name_fr = Nombre total d'hectares concernés par les transactions (en cours)
-hectares_production_deals_desc_en = No available description.
-hectares_production_deals_desc_es = Ninguna descripción disponible.
-hectares_production_deals_desc_fr = Aucune description disponible.
-hectares_production_deals_id = 15
+codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15"]
+
+[INDICATOR_0]
+id = 0
+unit = Units
+name_en = Total number of deals
+name_es = Total number of deals
+name_fr = Nombre total de transactions
+desc_en = No available description.
+desc_es = Ninguna descripción disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_1]
+id = 1
+unit = Units
+name_en = Total number of agriculture deals
+name_es = FIXME
+name_fr = Nombre total de transactions (agriculture)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_2]
+id = 2
+unit = Units
+name_en = Total number of conservation deals
+name_es = FIXME
+name_fr = Nombre total de transactions (conservation)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_3]
+id = 3
+unit = Units
+name_en = Total number of forestry deals
+name_es = FIXME
+name_fr = Nombre total de transactions (sylviculture)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_4]
+id = 4
+unit = Units
+name_en = Total number of industry deals
+name_es = FIXME
+name_fr = Nombre total de transactions (industrie)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_5]
+id = 5
+unit = Units
+name_en = Total number of renewable energy deals
+name_es = FIXME
+name_fr = Nombre total de transactions (nergies renouvelables)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_6]
+id = 6
+unit = Units
+name_en = Total number of tourism deals
+name_es = FIXME
+name_fr = Nombre total de transactions (tourisme)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_7]
+id = 7
+unit = Units
+name_en = Total number of deals of other topic
+name_es = FIXME
+name_fr = Nombre total de transactions (autre)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_8]
+id = 8
+unit = Units
+name_en = Total number of deals of unknown topic
+name_es = FIXME
+name_fr = Nombre total de transactions (Aucune description disponible.)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_9]
+id = 9
+unit = Units
+name_en = Total deals in intended state
+name_es = FIXME
+name_fr = Nombre total de transactions (prvues)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_10]
+id = 10
+unit = Units
+name_en = Total deals in concluded state
+name_es = FIXME
+name_fr = Nombre total de transactions (conclues)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_11]
+id = 11
+unit = Units
+name_en = Total deals in failed state
+name_es = FIXME
+name_fr = Nombre total de transactions (chec)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_12]
+id = 12
+unit = Hectares
+name_en = Total hectares in deals
+name_es = FIXME
+name_fr = Nombre total d'hectares concerns par les transactions
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_13]
+id = 13
+unit = Hectares
+name_en = Total hectares in intended deals
+name_es = FIXME
+name_fr = Nombre total d'hectares concerns par les transactions (prvues)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_14]
+id = 14
+unit = Hectares
+name_en = Total hectares in contracted deals
+name_es = FIXME
+name_fr = Nombre total d'hectares concerns par les transactions (conclues)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_15]
+id = 15
+unit = Hectares
+name_en = Total hectares in deals in production
+name_es = FIXME
+name_fr = Nombre total d'hectares concerns par les transactions (en cours)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
 
