--- a/LandMatrixExtractor/files/configuration.ini
+++ b/LandMatrixExtractor/files/configuration.ini
@@ -7,7 +7,7 @@ first_valid_year = 2014
 
 [TRANSLATOR]
 org_id = lm
-obs_int = 693
+obs_int = 748
 sli_int = 0
 dat_int = 1
 igr_int = 0
@@ -33,7 +33,7 @@ name = Creative Commons Attribution-NonComercial-ShareAlike 3.0 Unported (CC BY-
 url = http://creativecommons.org/licenses/by-nc-sa/3.0/7
 
 [INDICATORS]
-codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15"]
+codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15", "INDICATOR_16"]
 
 [INDICATOR_0]
 id = 0
@@ -191,6 +191,16 @@ unit = Hectares
 name_en = Total hectares in deals in production
 name_es = FIXME
 name_fr = Nombre total d'hectares concerns par les transactions (en cours)
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_16]
+id = 16
+unit = Units
+name_en = Total number of biofuel deals
+name_es = FIXME
+name_fr = FIXME
 desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
