added support for indicators: Food crops, Livestock, Non-food agricultural commodities, Agriunspecified. All of them are subcategories of Agriculture

--- a/LandMatrixExtractor/files/configuration.ini
+++ b/LandMatrixExtractor/files/configuration.ini
@@ -7,7 +7,7 @@ first_valid_year = 2014
 
 [TRANSLATOR]
 org_id = lm
-obs_int = 748
+obs_int = 964
 sli_int = 0
 dat_int = 1
 igr_int = 0
@@ -33,7 +33,7 @@ name = Creative Commons Attribution-NonComercial-ShareAlike 3.0 Unported (CC BY-
 url = http://creativecommons.org/licenses/by-nc-sa/3.0/7
 
 [INDICATORS]
-codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15", "INDICATOR_16"]
+codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15", "INDICATOR_16", "INDICATOR_17", "INDICATOR_18", "INDICATOR_19", "INDICATOR_20"]
 
 [INDICATOR_0]
 id = 0
@@ -198,7 +198,47 @@ desc_fr = Aucune description disponible.
 [INDICATOR_16]
 id = 16
 unit = Units
-name_en = Total number of biofuel deals
+name_en = Total number of biofuel (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_17]
+id = 17
+unit = Units
+name_en = Total number of Food crops (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_18]
+id = 18
+unit = Units
+name_en = Total number of Livestock (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_19]
+id = 19
+unit = Units
+name_en = Total number of Non-food agricultural commodities (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_20]
+id = 20
+unit = Units
+name_en = Total number of Agriunspecified (Agriculture) deals
 name_es = FIXME
 name_fr = FIXME
 desc_en = No available description.
