Added indicators hectares based on
The list of indicators added are:
25) Total Hectares in Conservation Deals
26) Total Hectares in Forestry Deals
27) Total Hectares in Industry Deals
28) Total Hectares in Renewable Energy Deals
29) Total Hectares in Tourism Deals
30) Total Hectares in Deals of Other Topic
31) Total Hectares in Deals of Unknown Topic
32) Total hectares in biofuel (Agriculture) deals
33) Total hectares in Food crops (Agriculture) deals
34) Total hectares in Livestock (Agriculture) deals
35) Total hectares in Non-food agricultural commodities (Agriculture) deals
36) Total hectares in Agriunspecified (Agriculture) deals
37) Total hectares in For wood and fibre (Forestry) deals
38) Total hectares in For carbon sequestration/REDD (Forestry) deals
39) Total hectares in Forestunspecified (Forestry) deals

--- a/LandMatrixExtractor/files/configuration.ini
+++ b/LandMatrixExtractor/files/configuration.ini
@@ -7,7 +7,7 @@ first_valid_year = 2014
 
 [TRANSLATOR]
 org_id = lm
-obs_int = 1243
+obs_int = 1743
 sli_int = 0
 dat_int = 1
 igr_int = 0
@@ -33,7 +33,7 @@ name = Creative Commons Attribution-NonComercial-ShareAlike 3.0 Unported (CC BY-
 url = http://creativecommons.org/licenses/by-nc-sa/3.0/7
 
 [INDICATORS]
-codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15", "INDICATOR_16", "INDICATOR_17", "INDICATOR_18", "INDICATOR_19", "INDICATOR_20", "INDICATOR_21", "INDICATOR_22", "INDICATOR_23", "INDICATOR_24"]
+codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15", "INDICATOR_16", "INDICATOR_17", "INDICATOR_18", "INDICATOR_19", "INDICATOR_20", "INDICATOR_21", "INDICATOR_22", "INDICATOR_23", "INDICATOR_24", "INDICATOR_25", "INDICATOR_26", "INDICATOR_27", "INDICATOR_28", "INDICATOR_29", "INDICATOR_30", "INDICATOR_31", "INDICATOR_32", "INDICATOR_33", "INDICATOR_34", "INDICATOR_35", "INDICATOR_36", "INDICATOR_37", "INDICATOR_38", "INDICATOR_39"]
 
 [INDICATOR_0]
 id = 0
@@ -279,6 +279,156 @@ desc_fr = Aucune description disponible.
 id = 24
 unit = Hectares
 name_en = Total hectares in agriculture deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_25]
+id = 25
+unit = Hectares
+name_en = Total hectares in conservation deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_26]
+id = 26
+unit = Hectares
+name_en = Total hectares in forestry deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_27]
+id = 27
+unit = Hectares
+name_en = Total hectares in industry deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_28]
+id = 28
+unit = Hectares
+name_en = Total hectares in renewable energy deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_29]
+id = 29
+unit = Hectares
+name_en = Total hectares in tourism deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_30]
+id = 30
+unit = Hectares
+name_en = Total hectares in deals of other topic
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_31]
+id = 31
+unit = Hectares
+name_en = Total hectares in deals of unknown topic
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_32]
+id = 32
+unit = Hectares
+name_en = Total hectares in biofuel (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_33]
+id = 33
+unit = Hectares
+name_en = Total hectares in Food crops (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_34]
+id = 34
+unit = Hectares
+name_en = Total hectares in Livestock (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_35]
+id = 35
+unit = Hectares
+name_en = Total hectares in Non-food agricultural commodities (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_36]
+id = 36
+unit = Hectares
+name_en = Total hectares in Agriunspecified (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_37]
+id = 37
+unit = Hectares
+name_en = Total hectares in For wood and fibre (Forestry) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_38]
+id = 38
+unit = Hectares
+name_en = Total hectares in For carbon sequestration/REDD (Forestry) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_39]
+id = 39
+unit = Hectares
+name_en = Total hectares in Forestunspecified (Forestry) deals
 name_es = FIXME
 name_fr = FIXME
 desc_en = No available description.
