added indicator 41 Total Number of Deals in Production

--- a/LandMatrixExtractor/files/configuration.ini
+++ b/LandMatrixExtractor/files/configuration.ini
@@ -7,7 +7,7 @@ first_valid_year = 2014
 
 [TRANSLATOR]
 org_id = lm
-obs_int = 1778
+obs_int = 1859
 sli_int = 0
 dat_int = 1
 igr_int = 0
@@ -33,7 +33,7 @@ name = Creative Commons Attribution-NonComercial-ShareAlike 3.0 Unported (CC BY-
 url = http://creativecommons.org/licenses/by-nc-sa/3.0/7
 
 [INDICATORS]
-codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15", "INDICATOR_16", "INDICATOR_17", "INDICATOR_18", "INDICATOR_19", "INDICATOR_20", "INDICATOR_21", "INDICATOR_22", "INDICATOR_23", "INDICATOR_24", "INDICATOR_25", "INDICATOR_26", "INDICATOR_27", "INDICATOR_28", "INDICATOR_29", "INDICATOR_30", "INDICATOR_31", "INDICATOR_32", "INDICATOR_33", "INDICATOR_34", "INDICATOR_35", "INDICATOR_36", "INDICATOR_37", "INDICATOR_38", "INDICATOR_39", "INDICATOR_40"]
+codes = ["INDICATOR_0", "INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6", "INDICATOR_7", "INDICATOR_8", "INDICATOR_9", "INDICATOR_10", "INDICATOR_11", "INDICATOR_12", "INDICATOR_13", "INDICATOR_14", "INDICATOR_15", "INDICATOR_16", "INDICATOR_17", "INDICATOR_18", "INDICATOR_19", "INDICATOR_20", "INDICATOR_21", "INDICATOR_22", "INDICATOR_23", "INDICATOR_24", "INDICATOR_25", "INDICATOR_26", "INDICATOR_27", "INDICATOR_28", "INDICATOR_29", "INDICATOR_30", "INDICATOR_31", "INDICATOR_32", "INDICATOR_33", "INDICATOR_34", "INDICATOR_35", "INDICATOR_36", "INDICATOR_37", "INDICATOR_38", "INDICATOR_39", "INDICATOR_40", "INDICATOR_41"]
 
 [INDICATOR_0]
 id = 0
@@ -439,6 +439,16 @@ desc_fr = Aucune description disponible.
 id = 40
 unit = Hectares
 name_en = Total hectares in failed deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_41]
+id = 41
+unit = Units
+name_en = Total number of in prodcution deals
 name_es = FIXME
 name_fr = FIXME
 desc_en = No available description.
